data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1804.wast
;; 5. **Test Block with `br_if` Targeting Invalid Index**:    - Within a block, place a `br_if` that targets a non-existent label index.    - This tests conditional branch target resolution.    - Expected result: WebAssembly must throw an error for the invalid index, whereas wizard_engine might proceed with unintended behavior.

(assert_invalid
  (module (func $br_if_invalid_index
    (block
      (br_if 1 (i32.const 1))
    )
  ))
  "unknown label" 
)